<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <!-- Close Button -->
        <ImageButton
            android:id="@+id/closeButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end|top"
            android:layout_margin="8dp"
            android:background="?android:attr/selectableItemBackgroundBorderless"
            android:padding="4dp"
            android:src="@android:drawable/ic_menu_close_clear_cancel" />

        <!-- Title -->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_gravity="start|top"
            android:layout_weight="1"
            android:layout_marginStart="25dp"
            android:text="@string/filter_modal_title"
            android:textSize="25sp"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="24dp">

            <!-- Entry Fee -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="16dp"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp"
                    android:text="@string/filter_modal_fee"
                    android:textStyle="bold" />

                <Button
                    android:id="@+id/btnEntryFree"
                    android:layout_width="wrap_content"
                    android:layout_height="40dp"
                    android:backgroundTint="@color/grey"
                    android:text="@string/filter_modal_fee_free"
                    android:textColor="@color/white"
                    android:textAllCaps="false" />
            </LinearLayout>

            <!-- Campus -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="16dp"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp"
                    android:text="@string/filter_modal_campus"
                    android:textStyle="bold" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:paddingEnd="16dp">

                    <Button
                        android:id="@+id/btnCampusKampar"
                        android:layout_width="wrap_content"
                        android:layout_height="40dp"
                        android:layout_marginEnd="8dp"
                        android:backgroundTint="@color/grey"
                        android:text="@string/filter_modal_campus_kampar"
                        android:textColor="@color/white"
                        android:textAllCaps="false" />

                    <Button
                        android:id="@+id/btnCampusSgLong"
                        android:layout_width="wrap_content"
                        android:layout_height="40dp"
                        android:backgroundTint="@color/grey"
                        android:text="@string/filter_modal_campus_sglong"
                        android:textColor="@color/white"
                        android:textAllCaps="false" />
                </LinearLayout>
            </LinearLayout>

            <!-- USSDC Category -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="16dp"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp"
                    android:text="@string/filter_modal_ussdc"
                    android:textStyle="bold" />

                <Spinner
                    android:id="@+id/ussdcSpinner"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:popupBackground="@android:color/white" />
            </LinearLayout>

            <!-- Date Range -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="16dp"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp"
                    android:text="@string/filter_modal_date"
                    android:textStyle="bold" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <EditText
                        android:id="@+id/dateFrom"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:clickable="true"
                        android:focusable="false"
                        android:hint="From" />

                    <EditText
                        android:id="@+id/dateTo"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:clickable="true"
                        android:focusable="false"
                        android:hint="To" />
                </LinearLayout>
            </LinearLayout>

            <!-- Clear and Apply Buttons -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:gravity="center"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/clearButton"
                    android:layout_width="0dp"
                    android:layout_height="40dp"
                    android:layout_marginEnd="8dp"
                    android:layout_weight="1"
                    android:backgroundTint="@android:color/holo_red_dark"
                    android:text="@string/clear"
                    android:textColor="@android:color/white" />

                <Button
                    android:id="@+id/applyButton"
                    android:layout_width="0dp"
                    android:layout_height="40dp"
                    android:layout_weight="1"
                    android:backgroundTint="@color/purple_700"
                    android:text="@string/apply"
                    android:textColor="@android:color/white" />
            </LinearLayout>

        </LinearLayout>
    </LinearLayout>
</ScrollView>
